scrollbar fixed

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -2,15 +2,26 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  scroll-behavior: smooth;
+  
 }
+
 
 body {
   background: var(--color-bg);
-  overflow:hidden;
-  height:100%;
+  height: 100vh;
+
 }
 
+.App{
+  /* width: 100%; */
+  /* height: 100%; */
+  /* overflow-y: scroll; */
+  scroll-behavior: smooth;
+}
+
+
+
+ 
 a {
   color: unset;
   text-decoration: none;
