--- a/website/src/containers/header/header.css
+++ b/website/src/containers/header/header.css
@@ -9,28 +9,30 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  border-radius: 50px;
-  width: 90%;
-  height: 40vh;
-  position: fixed;
-  margin-top: 25vh;
-  margin-left: 50vw;
-  transform: translate(-50%, -50%);
+
+  width: 100%;
+  height: 100vh;
+  /* position: fixed; */
+  margin-top: 0vh;
+  border: 1px solid yellow;;
+  
+  /* margin-left: 50vw; */
+  /* transform: translate(-50%, -50%); */
 }
 
-.palila__header:after{
+/* .palila__header:after{
 content: "";
 position: absolute;
 top: 0;
 left: 0;
-border-radius: 50px;
+
 width: 100%;
 height: 100%;
 background:  black;
 opacity: .2;
 z-index: -1;
 
-}
+} */
 
 .palila__header-container {
   padding-top: 8%;
