--- a/website/src/containers/showcase/showcase.css
+++ b/website/src/containers/showcase/showcase.css
@@ -12,13 +12,13 @@
     justify-content: center;
     padding: 5px;
     align-items: center;
-    width: 90%;
-    height: 40vh;
-    position: fixed;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid yellow;
-    top: 74vh;
+    width: 100%;
+    height: 250vh;
+    /* position: fixed; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    /* border: 1px solid yellow; */
+    /* top: 74vh; */
 }
 
 
